--- a/smapperApp/.gitignore
+++ b/smapperApp/.gitignore
@@ -1,1 +1,10 @@
-/bin
+# Ignore all bin directories
+bin
+# Ignore all files ending with ~
+*~
+# Ignore the target directory
+# Matches "target" in any subfolder
+target 
+#ignore eclipse
+.settings 
+log/*
