added target plarform to POM and common-logging lib in /lib as not maven relevant

--- a/smapperApp/build.properties
+++ b/smapperApp/build.properties
@@ -1,8 +1,8 @@
-output.. = bin/
+output.. = target/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
                css/default.css
-source.. = src/
+source.. = src/main/
