refactoring was src/main/com** ist: src/main/java/com**

--- a/smapperApp/build.properties
+++ b/smapperApp/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                icons/,\
                css/default.css
-source.. = src/main/
+source.. = src/main/java,\
+           src/test/java 
