--- a/smapperApp/pom.xml
+++ b/smapperApp/pom.xml
@@ -44,6 +44,27 @@
 
 
 	<build>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources-gen</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources-gen</directory>
+			</testResource>
+		</testResources>
+
+
+
+
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
