--- a/smapperApp/pom.xml
+++ b/smapperApp/pom.xml
@@ -48,22 +48,13 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
 			</resource>
 			<resource>
-				<directory>src/main/resources-gen</directory>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
 			</resource>
 		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-			</testResource>
-			<testResource>
-				<directory>src/test/resources-gen</directory>
-			</testResource>
-		</testResources>
-
-
-
 
 		<plugins>
 			<plugin>
