--- a/smapperApp/build.properties
+++ b/smapperApp/build.properties
@@ -6,4 +6,6 @@ bin.includes = META-INF/,\
                icons/,\
                css/default.css
 source.. = src/main/java,\
-           src/test/java 
+           src/test/java,\
+           src/test/resources,\
+           src/main/resources 
