--- a/smapperApp/pom.xml
+++ b/smapperApp/pom.xml
@@ -23,10 +23,39 @@
 	<description>Bean's mapper</description>
 
 	<properties>
+		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.17.0</tycho-version>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<scm>
 		<connection>scm:git:https://github.com/senatov/smapper/tree/master/smapperApp</connection>
@@ -35,15 +64,38 @@
 	</scm>
 
 	<repositories>
+
 		<repository>
 			<id>juno</id>
 			<url>http://download.eclipse.org/releases/juno/</url>
 			<layout>p2</layout>
 		</repository>
+
+		<repository>
+			<id>com.springsource.repository.bundles.snapshot</id>
+			<name>EBR Spring Snapshot Repository</name>
+			<url>http://repository.springsource.com/maven/bundles/snapshot</url>
+		</repository>
 	</repositories>
 
 
+
+
 	<build>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
+
+
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
