--- a/com.senatov.smapperApp/build.properties
+++ b/com.senatov.smapperApp/build.properties
@@ -9,3 +9,4 @@ source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
            src/main/resources 
+src.includes = lib/commons-logging-1.1.1.jar
