--- a/com.senatov.smapperApp/plugin.xml
+++ b/com.senatov.smapperApp/plugin.xml
@@ -19,7 +19,22 @@
                name="appName"
                value="com.senatov.smapperApp">
          </property>
+         <property
+               name="windowImages"
+               value="icons/16x16.gif,icons/32x32.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
+         </property>
       </product>
+   </extension>
+   <extension
+         point="org.eclipse.ui.splashHandlers">
+      <splashHandler
+            class="com.senatov.smapperapp.splashHandlers.InteractiveSplashHandler"
+            id="com.senatov.smapperapp.splashHandlers.interactive">
+      </splashHandler>
+      <splashHandlerProductBinding
+            productId="com.senatov.smapperApp.product"
+            splashId="com.senatov.smapperapp.splashHandlers.interactive">
+      </splashHandlerProductBinding>
    </extension>
 
 </plugin>
