--- a/com.senatov.smapperApp/pom.xml
+++ b/com.senatov.smapperApp/pom.xml
@@ -9,12 +9,14 @@
 
 	<organization>
 		<name>Iakov Senatov</name>
+		<url>https://github.com/senatov/smapper</url>
 	</organization>
 
 	<groupId>smapperApp</groupId>
 	<artifactId>com.senatov.smapperApp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
+
 
 	<name>SmapperApp</name>
 	<description>Bean's mapper</description>
@@ -23,6 +25,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.23.0</tycho-version>
 		<org.springframework.version>4.1.7.RELEASE</org.springframework.version>
+		<org.apache.log4j>1.2.15</org.apache.log4j>
 	</properties>
 
 	<dependencies>
@@ -31,7 +34,6 @@
 			<artifactId>spring-core</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -45,11 +47,6 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
-		</dependency>
 	</dependencies>
 
 	<scm>
@@ -66,8 +63,8 @@
 		</repository>
 
 		<repository>
-			<id>juno</id>
-			<url>http://download.eclipse.org/releases/mars/</url>
+			<id>mars</id>
+			<url>http://download.eclipse.org/eclipse/updates/4.5milestones</url>
 			<layout>p2</layout>
 		</repository>
 
@@ -138,4 +135,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<url>https://github.com/senatov/smapper</url>
 </project>
