--- a/com.senatov.smapperApp/pom.xml
+++ b/com.senatov.smapperApp/pom.xml
@@ -47,6 +47,12 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<scm>
