--- a/com.senatov.smapperApp/plugin.xml
+++ b/com.senatov.smapperApp/plugin.xml
@@ -5,7 +5,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            name="com.senatov.smapperApp"
+            name="sMapper"
             application="org.eclipse.e4.ui.workbench.swt.E4Application">
          <property
                name="clearPersistedState"
@@ -17,24 +17,36 @@
          </property>
          <property
                name="appName"
-               value="com.senatov.smapperApp">
+               value="sMapper">
          </property>
          <property
                name="windowImages"
-               value="icons/16x16.gif,icons/32x32.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
+               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
+         </property>
+         <property
+               name="aboutImage"
+               value="icons/256x256.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="Mapper of DB Tables">
          </property>
       </product>
    </extension>
    <extension
          point="org.eclipse.ui.splashHandlers">
       <splashHandler
-            class="com.senatov.smapperapp.splashHandlers.InteractiveSplashHandler"
-            id="com.senatov.smapperapp.splashHandlers.interactive">
+            class="com.senatov.smapperapp.splashHandlers.BrowserSplashHandler"
+            id="com.senatov.smapperapp.splashHandlers.browser">
       </splashHandler>
       <splashHandlerProductBinding
             productId="com.senatov.smapperApp.product"
-            splashId="com.senatov.smapperapp.splashHandlers.interactive">
+            splashId="com.senatov.smapperapp.splashHandlers.browser">
       </splashHandlerProductBinding>
+      <splashHandler
+            class="com.senatov.smapperapp.splashHandlers.InteractiveSplashHandler"
+            id="com.senatov.smapperapp.splashHandlers.interactive">
+      </splashHandler>
    </extension>
    <extension
          point="org.eclipse.ui.intro">
