new definition of pom file

--- a/com.senatov.smapperApp/build.properties
+++ b/com.senatov.smapperApp/build.properties
@@ -4,9 +4,10 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css,\
+               /com.senatov.smapperApp/plugin_customization.ini
+src.includes = lib/commons-logging-1.1.1.jar
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
-           src/main/resources 
-src.includes = lib/commons-logging-1.1.1.jar
+           src/main/resources
