--- a/com.senatov.smapperApp/build.properties
+++ b/com.senatov.smapperApp/build.properties
@@ -4,9 +4,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css,\
-               /com.senatov.smapperApp/plugin_customization.ini
-src.includes = lib/commons-logging-1.1.1.jar
+               css/default.css
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
