--- a/com.senatov.smapperApp/pom.xml
+++ b/com.senatov.smapperApp/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.senatov.smapperApp</groupId>
 	<artifactId>sMapper</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
-	<name>sMapper</name>
-	<packaging>pom</packaging>
+	<name>com.senatov.smapperApp</name>
+	<packaging>eclipse-plugin</packaging>
 	<url>https://github.com/senatov/smapper</url>
 	<description>Visual mapper</description>
 	<prerequisites>
@@ -19,11 +19,14 @@
 		<url>https://github.com/senatov/smapper</url>
 	</organization>
 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<tycho.version>0.23.0</tycho.version>
+		<tycho-version>0.23.1</tycho-version>
 		<org.springframework.version>4.1.7.RELEASE</org.springframework.version>
 	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -55,10 +58,7 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-
-
 	</dependencies>
-
 	<scm>
 		<connection>scm:git:https://github.com/senatov/smapper/tree/master/smapperApp</connection>
 		<developerConnection>https://github.com/senatov/smapper/tree/master/smapperApp</developerConnection>
@@ -73,8 +73,8 @@
 		</repository>
 
 		<repository>
-			<id>eclipse-mars</id>
-			<url>http://download.eclipse.org/releases/mars</url>
+			<id>mars</id>
+			<url>http://download.eclipse.org/releases/mars/</url>
 			<layout>p2</layout>
 		</repository>
 
@@ -85,32 +85,61 @@
 		</repository>
 	</repositories>
 
+
+
+
 	<build>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
+
+
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<version>1.0</version>
+				<configuration>
+					<toolchains>
+						<jdk>
+							<version>1.8</version>
+							<vendor>sun</vendor>
+						</jdk>
+					</toolchains>
+				</configuration>
+			</plugin>
+
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
+				<version>${tycho-version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
 				<configuration>
 					<environments>
 						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
 						</environment>
 						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
+							<os>linux</os>
+							<ws>gtk</ws>
 							<arch>x86_64</arch>
 						</environment>
 						<environment>
@@ -119,44 +148,6 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.3</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>sMapper.target</file>
-									<type>target</type>
-									<classifier>sMapper</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<resolver>p2</resolver>
-					<target>
-						<artifact>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>sMapper</artifactId>
-							<version>${project.version}</version>
-							<classifier>sMapper</classifier>
-						</artifact>
-					</target>
 				</configuration>
 			</plugin>
 		</plugins>
