--- a/smapperApp/com.senatov.smapperApp/pom.xml
+++ b/smapperApp/com.senatov.smapperApp/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.senatov.smapperApp</groupId>
+	<groupId>com.senatov.smapper</groupId>
 	<artifactId>sMapper</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
-	<name>com.senatov.smapperApp</name>
+	<name>com.senatov.smapper.app</name>
 	<packaging>eclipse-plugin</packaging>
 	<url>https://github.com/senatov/smapper</url>
 	<description>Visual mapper</description>
