--- a/smapperApp/com.senatov.smapperApp/META-INF/log4j.properties
+++ b/smapperApp/com.senatov.smapperApp/META-INF/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.CONSOLE.threshold=DEBUG
 
 # FILE is set to be a FileAppender
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.file=log/smapper.log
+log4j.appender.FILE.file=../../../log/smapper.log
 log4j.appender.FILE.datePattern='.'yyyy-MM-dd
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{ISO8601} %-5p [%c] %m%n
