--- a/smapperApp/com.senatov.smapper.feature/pom.xml
+++ b/smapperApp/com.senatov.smapper.feature/pom.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.senatov.smapper</groupId>
+    <artifactId>smapper</artifactId>
+    <version>1.0.2-SNAPSHOT</version>
+    <relativePath>../../</relativePath>
+  </parent>
   <groupId>com.senatov.smapper</groupId>
   <artifactId>com.senatov.smapper.feature</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-maven-plugin</artifactId>
-        <version>0.23.1</version>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
-  </build>
-  <parent>
-  	<groupId>com.senatov.smapperApp</groupId>
-  	<artifactId>sMapper</artifactId>
-  	<version>1.0.1-SNAPSHOT</version>
-  	<relativePath>../com.senatov.smapperApp</relativePath>
-  </parent>
 </project>
