--- a/smapperApp/pom.xml
+++ b/smapperApp/pom.xml
@@ -1,80 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
     http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.senatov.smapper.parent</groupId>
-    <artifactId>com.senatov.smapper.parent.app</artifactId>
-    <version>1.0.3</version>
-<!--     <packaging>pom</packaging> -->
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-<!-- 	<modules> -->
-<!-- 		<module>com.senatov.smapper.feature</module> -->
-<!-- 		<module>com.senatov.smapper.app</module> -->
-<!-- 	</modules> -->
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.senatov.smapper.parent</groupId>
+	<artifactId>com.senatov.smapper.parent.app</artifactId>
+	<version>1.0.3-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<modules>
+		<module>com.senatov.smapper.feature</module>
+		<module>com.senatov.smapper.app</module>
+	</modules>
 
-    <properties>
-        <tycho.version>0.23.1</tycho.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-        <mars-repo.url>http://download.eclipse.org/releases/mars</mars-repo.url>
-        
-    </properties>
+	<properties>
+		<tycho.version>0.23.1</tycho.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<mars-repo.url>http://download.eclipse.org/releases/mars</mars-repo.url>
+	</properties>
 
-    <repositories>
-        <repository>
-            <id>mars</id>
-            <url>${mars-repo.url}</url>
-            <layout>p2</layout>
-        </repository>
-    </repositories>
+	<repositories>
+		<repository>
+			<id>mars</id>
+			<url>${mars-repo.url}</url>
+			<layout>p2</layout>
+		</repository>
+	</repositories>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-maven-plugin</artifactId>
-                <version>${tycho.version}</version>
-                <extensions>true</extensions>
-            </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<extensions>true</extensions>
+			</plugin>
 
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>target-platform-configuration</artifactId>
-                <version>${tycho.version}</version>
-                <configuration>
-                    <environments>
-                        <environment>
-                            <os>linux</os>
-                            <ws>gtk</ws>
-                            <arch>x86</arch>
-                        </environment>
-                        <environment>
-                            <os>linux</os>
-                            <ws>gtk</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                        <environment>
-                            <os>win32</os>
-                            <ws>win32</ws>
-                            <arch>x86</arch>
-                        </environment>
-                        <environment>
-                            <os>win32</os>
-                            <ws>win32</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                        <environment>
-                            <os>macosx</os>
-                            <ws>cocoa</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                    </environments>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <packaging>pom</packaging>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<environments>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project> 
