--- a/smapperApp/com.senatov.smapper.feature/pom.xml
+++ b/smapperApp/com.senatov.smapper.feature/pom.xml
@@ -3,14 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
+	<artifactId>feature</artifactId>
+	<packaging>eclipse-feature</packaging>	
 	<parent>
 		<groupId>com.senatov.smapper.parent</groupId>
-		<artifactId>com.senatov.smapper.parent.app</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
-		<relativePath>../</relativePath>
+		<artifactId>app</artifactId>
+		<version>1.0.3-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<groupId>com.senatov.smapper</groupId>
-	<artifactId>com.senatov.smapper.feature</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
-	<packaging>eclipse-feature</packaging>
+	<modules>
+		<module>com.senatov.smapper.app</module>
+	</modules>	
 </project>
