save before adding plugin management section.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ RemoteSystemsTempFiles
 /smapperApp/.settings
 /smapperApp/bin
 /com.senatov.smapperApp/target
+/smapperApp/com.senatov.smapper.app/target
