search on error

--- a/plugins/com.senatov.smapper.smapperApp/build.properties
+++ b/plugins/com.senatov.smapper.smapperApp/build.properties
@@ -4,8 +4,18 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css,\
+               com.senatov.smapper.smapperApp/css/,\
+               com.senatov.smapper.smapperApp/icons/,\
+               com.senatov.smapper.smapperApp/images/,\
+               com.senatov.smapper.smapperApp/src/,\
+               com.senatov.smapper.smapperApp/META-INF/
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
            src/main/resources
+src.includes = com.senatov.smapper.smapperApp/src/,\
+               com.senatov.smapper.smapperApp/icons/,\
+               com.senatov.smapper.smapperApp/images/,\
+               com.senatov.smapper.smapperApp/css/,\
+               com.senatov.smapper.smapperApp/META-INF/
