--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,8 @@
 						<artifactId>tycho-surefire-plugin</artifactId>
 						<version>${tycho-version}</version>
 						<configuration>
-							<useUIHarness>true</useUIHarness>
+							<testRuntime>p2Installed</testRuntime>	
+							<useUIHarness>true</useUIHarness>				
 						</configuration>
 					</plugin>
 				</plugins>
