--- a/plugins/com.senatov.smapper.smapperApp/pom.xml
+++ b/plugins/com.senatov.smapper.smapperApp/pom.xml
@@ -2,11 +2,10 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>com.senatov.smapperApp</artifactId>
+	<artifactId>com.senatov.smapper.smapperApp</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<name>com.senatov.smapper.apply_save_actions</name>
-	<description>com.senatov.smapper.app
- plug-in project</description>
+	<name>com.senatov.smapper.smapperApp</name>
+	<description>com.senatov.smapper.app plug-in project</description>
 
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
