--- a/features/pom.xml
+++ b/features/pom.xml
@@ -3,9 +3,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.senatov.smapper</groupId>
   <artifactId>features</artifactId>
-  <version>1.0.7-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <parent>
+  	<groupId>com.senatov.smapper</groupId>
+  	<artifactId>parent</artifactId>
+  	<version>1.0.7-SNAPSHOT</version>
+  </parent>
+  <modules>
+  	<module>com.senatov.smapper.feature</module>
+  </modules>
 </project>
