--- a/plugins/com.senatov.smapper.smapperApp/pom.xml
+++ b/plugins/com.senatov.smapper.smapperApp/pom.xml
@@ -2,10 +2,10 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>com.senatov.smapper.smapperApp</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<name>com.senatov.smapper.smapperApp</name>
-	<description>com.senatov.smapper.app plug-in project</description>
+	<name>com.senatov.smapper.maingui</name>
+	<description>com.senatov.smapper.app
+ plug-in project</description>
 
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
@@ -13,4 +13,44 @@
 		<version>1.0.7-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.eclipse.tycho
+										</groupId>
+										<artifactId>
+											tycho-packaging-plugin
+										</artifactId>
+										<versionRange>
+											[0.23.1,)
+										</versionRange>
+										<goals>
+											<goal>
+												validate-version
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<artifactId>maingui</artifactId>
 </project>
