--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+	</dependencies>
+
 
 	<profiles>
 		<profile>
@@ -113,7 +121,7 @@
 						<version>${tycho-version}</version>
 						<configuration>
 							<testRuntime>p2Installed</testRuntime>	
-							<useUIHarness>true</useUIHarness>				
+							<useUIHarness>true</useUIHarness>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -140,7 +148,7 @@
 		</plugins>
 	</build>
 	<modules>
-		<module>plugins</module>
 		<module>features</module>
+		<module>plugins</module>
 	</modules>
 </project>
