--- a/features/com.senatov.smapper.feature/pom.xml
+++ b/features/com.senatov.smapper.feature/pom.xml
@@ -2,7 +2,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>feature1</artifactId>
+    <artifactId>com.senatov.smapper.feature</artifactId>
     <packaging>eclipse-feature</packaging>
 	<name>com.senatov.smapper.feature1</name>
 	<description>Feature project for the com.senatov.smapper.feature plug-in</description>
