--- a/features/com.senatov.smapper.feature1/pom.xml
+++ b/features/com.senatov.smapper.feature1/pom.xml
@@ -10,6 +10,7 @@
     <parent>
         <groupId>com.senatov.smapper</groupId>
         <artifactId>features</artifactId>
-        <version>1.0.10-SNAPSHOT</version>
+        <version>1.0.7-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
 </project>
