--- a/plugins/com.senatov.smapper.smapperApp/.project
+++ b/plugins/com.senatov.smapper.smapperApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.senatov.smapperApp</name>
+	<name>com.senatov.smapper.smapperApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
