--- a/plugins/com.senatov.smapper.smapperApp/pom.xml
+++ b/plugins/com.senatov.smapper.smapperApp/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>com.senatov.smapperApp</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<name>the main GUI</name>
+	<name>com.senatov.smapperApp</name>
 	<description>com.senatov.smapper.app plug-in project</description>
 
 	<parent>
