--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/.metadata
-/External Plug-in Libraries
-/.DS_Store
-
-/plugins/com.senatov.smapperApp/target
+/target
+/.settings
+/.classpath
+/.project
+/workspace
